added all files

--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -2,20 +2,22 @@
     <h1>Initiatives</h1>
     <article>
         <header>
-            <h1>Graduate Summer Student</h1>
-            <span><address>University of Glasgow, UK</address><time>2013</time></span>
+            <h1>Treasurer</h1>
+            <span><address>Asha for Education UIUC Chapter</address><time>2018-Present</time></span>
         </header>
         <p>
-            Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
+          Managed incoming and outgoing finances for the organization and coordinated with the Asha Central team to ensure efficient financial management of the chapter.
         </p>
     </article>
     <article>
         <header>
-            <h1>Student Volunteer</h1>
-            <span><address>British RedCross, Glasgow, UK</address><time>2013</time></span>
+            <h1>Graduate Coordinator</h1>
+            <span><address>Asha for Education UIUC Chapter</address><time>2017-2018</time></span>
         </header>
         <p>
-            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
+          Organized large-scale (~2.5k attendees) fund-raising events for Asha for Education. Funds were used to finance educational projects for underprivileged students in India.
+          <br>
+          Supervised efforts of a team of 12 members.
         </p>
     </article>
 </section>
