--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,18 +2,47 @@
     <h1>Programming Skills</h1>
     <article>
         <header>
-            <h1>Software engineering & web development</h1>
+            <h1>Data Analysis</h1>
         </header>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>C/C++ & Objective-C</em>
-        <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Java</em>, <em>Python</em>, <em>PHP</em> &amp; <em>Git</em>
+          &nbsp;&nbsp;<em>Python (Numpy, Pandas, SciPy), SAS</em>, <em> R</em>
         </p>
+        <br>
+        <header>
+            <h1>Databases</h1>
+        </header>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Javascript</em>
+          &nbsp;&nbsp;<em>SQL, Hive, PySpark, Google BigQuery</em>
         </p>
+        <br>
+        <header>
+            <h1>Scripting</h1>
+        </header>
+        <p>
+          &nbsp;&nbsp;<em>Python, Pig</em>
+        </p>
+        <br>
+        <header>
+            <h1>Machine Learning and Statistical Analysis</h1>
+        </header>
+        <p>
+          &nbsp;&nbsp;<em>Python (StatsModels, PyMC3, Sklearn, NLTK, PyTorch), R, SAS</em>
+        </p>
+        <br>
+        <header>
+            <h1>Visualization</h1>
+        </header>
+        <p>
+          &nbsp;&nbsp;<em>Python (MatplotLib, Plotly, Seaborn), R (RShiny, Leaflet, ggplot)</em>
+        </p>
+        <br>
+        <header>
+            <h1>Mathematical Analysis</h1>
+        </header>
+        <p>
+          &nbsp;&nbsp;<em>MATLAB, Mathematica</em>
+        </p>
+
+
     </article>
 </section>
