--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,43 +2,30 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Software Engineer</h1>
-            <span><address>Edinburgh, UK</address><time>2015 to Present</time></span>
-        </header>
-        <p>Lorem ipsum dolor sit amet, his et viris petentium philosophia,
-            at vix debitis deleniti. At vis velit volumus alienum, agam vocent assueverit usu ex. </p>
-    </article>
-    <article>
-        <header>
-            <h1>iOS Developer</h1>
-            <span><address>Glasgow, UK</address><time>2014 to 2015</time></span>
-        </header>
-        <p>Qui bonorum menandri intellegebat ex, mel quando oblique an. Et eam virtute debitis philosophia,
-            unum ancillae disputationi vim in. Ipsum vidisse meliore ex eum,
-            delectus tacimates conclusionemque has ei. Eam ubique cetero scribentur ne.</p>
-    </article>
-    <article>
-        <header>
             <h1>Teaching Assistant</h1>
-            <span><address>University of Glasgow, Glasgow, UK</address><time>2013 to 2014</time></span>
+            <span><address>UNIVERSITY OF ILLINOIS AT URBANA-CHAMPAIGN, Champaign, IL</address><time>2018 - Present</time></span>
         </header>
-        <p>Latine bonorum deserunt at nam. Mea nisl officiis eu, propriae similique has te, mei an brute meliore electram.
-            Quo admodum omittantur ei, etiam principes at eos. Sit vocent commodo ceteros in, at mel idque everti.</p>
+        <p>August 2018 - Present | LAS First Year Experience <br><br>
+          January 2018 - May 2018 | CS 102: Little Bits to Big Ideas </p>
     </article>
     <article>
         <header>
-            <h1>iOS Developer</h1>
-            <span><address>Student Start-up, Glasgow, UK</address><time>2013</time></span>
+            <h1>Data Science Intern</h1>
+            <span><address>GODADDY, Boston, MA</address><time>May 2018 - August 2018</time></span>
         </header>
-        <p>Mucius sententiae et mei, nec an diam ignota, tale epicurei intellegebat ne sit. Sumo pertinacia contentiones duo ei.</p>
     </article>
     <article>
         <header>
-            <h1>Web Developer</h1>
-            <span><address>Birmingham, UK</address><time>2007 to 2010</time></span>
+            <h1>Data Scientist</h1>
+            <span><address>ECOFROST TECHNOLOGIES, Pune, India</address><time>August 2016 - July 2017</time></span>
         </header>
-        <p> Et sed tritani volumus, dico rebum facilisis ea sed. His mundi efficiantur concludaturque no.
-            Cu eos argumentum constituam repudiandae, eu eum lorem nostrum, ei mel dicam iriure fabellas.
-        </p>
     </article>
+    <article>
+        <header>
+            <h1>Data Science Intern</h1>
+            <span><address>SILVERPUSH, Gurugram, India</address><time>Feb 2016 – May 2016</time></span>
+        </header>
+
+    </article>
+
 </section>
